[tool.poetry]
name = "detectron2"
version = "v0.5"
description = "poetry compatible version for torch 1.10.2+cu113"
authors = ["Maciej Zwolinski", "facebookreaserch"]

[[tool.poetry.source]]
name = "torch+cu113"
url = "https://download.pytorch.org/whl/cu113"
secondary = true
default = false

[tool.poetry.dependencies]
torch = { version = "1.10.2", source = "torch+cu113" }
torchvision = { version = "0.11.3", source = "torch+cu113" }

[build-system]
requires = ["poetry-core>=1.0.0", "wheel"]
build-backend = "poetry.core.masonry.api"